--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -29,6 +29,7 @@
         <h:outputStylesheet library="css" name="administracion/scroll-esquadron.css"/>
         <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
         <h:outputStylesheet library="css" name="administracion/profesores.css"/>
+        <h:outputStylesheet library="css" name="/administracion/estilo-tarjeton-licencia.css"/>
         <div uk-grid="">
             <div class="uk-width-1-1">
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover tabla">
@@ -89,9 +90,11 @@
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">contraseña</f:facet>
-                                    <h:outputText value="#{profesorModelo.contrasenia}">
-                                        <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
-                                    </h:outputText>
+                                    <div id="login-tabla-profesor">
+                                        <h:outputText styleClass="uk-display-inline-block uk-margin-small-left" value="#{profesorModelo.contrasenia}">
+                                            <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
+                                        </h:outputText>
+                                    </div>
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">correo</f:facet>
@@ -148,10 +151,12 @@
                 </div>
             </div>
         </div>
-
         <div class="uk-flex uk-flex-right uk-margin-top">
+            <button type="button" class="uk-button uk-button-primary uk-margin-small-right" uk-toggle="target: #modal-password">passwors</button>
             <h:button styleClass="uk-button uk-button-primary" value="#{otrosboton['back']}" outcome="regresar"/>
         </div>
+
+
 
         <h:panelGroup layout="block" id="modal-profesor" styleClass="uk-modal-container" pt:uk-modal="">
             <div class="uk-modal-dialog uk-margin-auto-vertical">
@@ -264,7 +269,7 @@
                         <h:commandButton value="${boton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.inserta()}"
-                                    render="@form formulario-tabla"
+                                    render="@form formulario-tabla modal-password"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalProfresor'); }"/>
                         </h:commandButton>
                         <h:commandButton value="${boton['update']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}">
@@ -298,12 +303,49 @@
                     <div class="uk-modal-footer uk-flex uk-flex-right">
                         <button class="uk-button uk-button-default uk-modal-close uk-margin-small-right">#{otrosboton['cancel']}</button>
                         <h:commandButton styleClass="uk-button uk-button-danger uk-modal-close" value="#{otrosboton['remove']}" disabled="#{0 ne administracionProfesorControlador.totalGrupos}">
-                            <f:ajax listener="#{administracionProfesorControlador.elimina}" render="formulario-tabla"/>
+                            <f:ajax listener="#{administracionProfesorControlador.elimina}"
+                                    render="formulario-tabla modal-password"
+                                    onevent="function funcion(data) {cerrarModal(data,'modal-eliminar');}"
+                                    />
                         </h:commandButton>
                     </div>
                 </h:form>
             </div>
         </h:panelGroup>
+        <h:panelGroup layout="block" id="modal-password" styleClass="uk-modal-container" pt:uk-modal="">
+                <div class="uk-modal-header  uk-background-primary">
+                    <h2 class="uk-modal-title uk-light uk-text-center uk-text-capitalize">
+                        contraseñas profesor
+                    </h2>
+                </div>
+                <div class="uk-modal-body uk-overflow-auto">
+                    <ui:repeat value="#{administracionProfesorControlador.profesorModeloLista}" var="profesorModelo">
+                        <div class="tablero-licencia">
+                            <div class="imagen">
+                                <h:graphicImage styleClass="uk-display-inline-block " library="img" name="/avatar/maestro.svg" width="60"/>
+                            </div>
+                            <div class="informacion">
+                                <h6>Informacion Profesor</h6>
+                                <p><h:outputText  value="Nombre: #{profesorModelo.nombre} #{profesorModelo.apellidoPaterno} #{profesorModelo.apellidoMaterno}"/></p>
+                                <p><h:outputText  value="Nickname: #{profesorModelo.apodo}"/></p>
+                            </div>
+                            <div class="datos">
+                                <h6>Password</h6>
+                                <div id="imagen-password-tablero">
+                                    <h:outputText styleClass="uk-display-inline-block uk-margin-small-left" value="#{profesorModelo.contrasenia}">
+                                        <f:converter converterId="tecolotl.web.ContraseniaConvertidor"/>
+                                    </h:outputText>
+                                </div>
+                            </div>
+                        </div>
+                    </ui:repeat>
+                </div>
+                <div class="uk-modal-footer uk-text-right">
+                    <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
+                    <button class="uk-button uk-button-primary" onclick="generatePdf()" type="button">PDF</button>
+                </div>
+        </h:panelGroup>
+        <h:outputScript library="js" name="html2pdf.bundle.min.js"/>
         <h:outputScript library="js" name="administracion/profesores.js"/>
         <h:outputScript library="js" name="tabla-profesor.js"/>
     </ui:define>
