muestra la galaxia en el listaod de profesor y coordinador

--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -108,7 +108,7 @@
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header"><span class="letra-titulo">#{administracion['catalogocoordinador.coordinator.detail.table.header.email']}</span></f:facet>
-                                    #{coordinadorModelo.correoEletronico}
+                                    #{coordinadorModelo.correoEletronico}, ${coordinadorControlador.escuelaBaseModelo.galaxia}
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header"><span class="letra-titulo">#{administracion['title.all.tables.column.password']}</span></f:facet>
