--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -84,7 +84,7 @@
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">correo</f:facet>
-                                    ${profesorModelo.correoEletronico}
+                                    ${profesorModelo.correoEletronico},${administracionProfesorControlador.escuelaBaseModelo.galaxia}
                                 </h:column>
                                 <h:column>
                                     <f:facet name="header">contraseña</f:facet>
