--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -269,7 +269,7 @@
                         <h:commandButton value="${boton['update']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.actualiza()}"
-                                    render="@form formulario-tabla estatus-escuelas"
+                                    render="@form formulario-tabla modal-password estatus-escuelas"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalProfresor',1);  }"/>
                         </h:commandButton>
                     </div>
